Feat: Added fight meters

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 			<h1 class="header__title"><span class="">Santa</span> vs. <span class="">Krampus</span></h1>
 			<p class="header__subtitle">2017 Deathmatch</p>
 		</header>
+		
+		<section class="healthbar">			
+			<div class="healthbar__santa">
+				<h3>Santa</h3>
+				<meter class="healthbar__santa-meter" max="1.0" min="0.0" value="0.9"></meter>
+			</div>
+			<div class="healthbar__krampus">
+				<h3>Krampus</h3>
+				<meter class="healthbar__krampus-meter" max="1.0" min="0.0" value="0.9" dir="rtl"></meter>
+			</div>
+		</section>
+
 	</section>
 
 	<script src="js/main.js"></script>
