--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="css/normalize.css" />
 	<link rel="stylesheet" href="css/index.css" />
+	<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 </head>
 <body>
 
