Feat: (wip) working on scoring system

--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
 		<section class="healthbar">			
 			<div class="healthbar__santa">
 				<h3>Santa</h3>
-				<meter class="healthbar__santa-meter" max="1.0" min="0.0" value="0.9"></meter>
+				<meter class="healthbar__santa-meter" max="1" min="0" value="1"></meter>
 			</div>
 			<div class="healthbar__krampus">
 				<h3>Krampus</h3>
-				<meter class="healthbar__krampus-meter" max="1.0" min="0.0" value="0.9" dir="rtl"></meter>
+				<meter class="healthbar__krampus-meter" max="1" min="0" value="1" dir="rtl"></meter>
 			</div>
+		</section>
+
+		<section class="result" aria-hidden="true">
+			<h2 class="result__title">Who wins?</h2>
+			<button class="resetFight">Go again?</button>
 		</section>
 
 	</section>
