fix: Fix class name for rest

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		<section class="result" aria-hidden="true">
 			<h2 class="result__title">Who wins?</h2>
-			<button class="resetFight">Go again?</button>
+			<button class="reset">Go again?</button>
 		</section>
 
 	</section>
