--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
 			</div>
 		</section>
 
+		<section class="instructions__santa">			
+			<p>
+				<strong class="santa-key-a">A</strong><strong class="santa-key-s">S</strong>
+			</p>
+			<p>Press 'A' or 'S' to punch Krampus</p>
+		</section>
+
+		<section class="instructions__krampus">
+			<p>
+				<strong class="krampus-key-k">K</strong><strong class="krampus-key-l">L</strong>
+			</p>
+			<p>Press 'K' or 'L' to punch Santa</p>
+		</section>
+
 		<section class="result" aria-hidden="true">
 			<h2 class="result__title">Who wins?</h2>
 			<button class="reset">Go again?</button>
