Feat: JS throtteling + start of fighters build

--- a/index.html
+++ b/index.html
@@ -26,6 +26,31 @@
 			</div>
 		</section>
 
+		<section class="fighters">
+			<section class="santa-body">
+
+				<div class="santa-body__head"></div>
+				<div class="santa-body__torso">
+					<div class="santa-body__lu-arm"></div>
+					<div class="santa-body__lf-arm"></div>
+					<div class="santa-body__ru-arm"></div>
+					<div class="santa-body__rf-arm"></div>					
+				</div>
+			
+			</section>
+			<section class="krampus-body">
+
+				<div class="krampus-body__head"></div>
+				<div class="krampus-body__torso">
+					<div class="krampus-body__lu-arm"></div>
+					<div class="krampus-body__lf-arm"></div>
+					<div class="krampus-body__ru-arm"></div>
+					<div class="krampus-body__rf-arm"></div>
+				</div>
+				
+			</section>
+		</section>
+
 		<section class="instructions__santa">			
 			<p>
 				<strong class="santa-key-a">A</strong><strong class="santa-key-s">S</strong>
