Feat: Start of Web Animation API work

--- a/index.html
+++ b/index.html
@@ -31,10 +31,15 @@
 
 				<div class="santa-body__head"></div>
 				<div class="santa-body__torso">
-					<div class="santa-body__lu-arm"></div>
-					<div class="santa-body__lf-arm"></div>
-					<div class="santa-body__ru-arm"></div>
-					<div class="santa-body__rf-arm"></div>					
+					<div class="santa-body__torso__inner"></div>
+					<div class="santa-l-arm">
+						<div class="santa-l-arm__upper"></div>
+						<div class="santa-l-arm__lower"></div>
+					</div>
+					<div class="santa-r-arm">
+						<div class="santa-r-arm__upper"></div>
+						<div class="santa-r-arm__lower"></div>
+					</div>				
 				</div>
 			
 			</section>
@@ -42,10 +47,15 @@
 
 				<div class="krampus-body__head"></div>
 				<div class="krampus-body__torso">
-					<div class="krampus-body__lu-arm"></div>
-					<div class="krampus-body__lf-arm"></div>
-					<div class="krampus-body__ru-arm"></div>
-					<div class="krampus-body__rf-arm"></div>
+					<div class="krampus-body__torso__inner"></div>
+					<div class="krampus-l-arm">
+						<div class="krampus-l-arm__upper"></div>
+						<div class="krampus-l-arm__lower"></div>
+					</div>
+					<div class="krampus-r-arm">
+						<div class="krampus-r-arm__upper"></div>
+						<div class="krampus-r-arm__lower"></div>
+					</div>
 				</div>
 				
 			</section>
