Feat: Bendy leg animations

--- a/index.html
+++ b/index.html
@@ -41,8 +41,17 @@
 						<div class="santa-r-arm__lower"></div>
 					</div>				
 				</div>
-			
 			</section>
+			
+			<div class="santa-legs">
+				<div class="santa-legs__l-upper"></div>
+				<div class="santa-legs__l-lower"></div>
+				<div class="santa-legs__l-foot"></div>
+				<div class="santa-legs__r-upper"></div>
+				<div class="santa-legs__r-lower"></div>
+				<div class="santa-legs__r-foot"></div>
+			</div>
+
 			<section class="krampus-body">
 
 				<div class="krampus-body__head"></div>
@@ -57,8 +66,18 @@
 						<div class="krampus-r-arm__lower"></div>
 					</div>
 				</div>
-				
 			</section>
+			
+			<div class="krampus-legs">
+				<div class="krampus-legs__l-upper"></div>
+				<div class="krampus-legs__l-lower"></div>
+				<div class="krampus-legs__l-foot"></div>
+				<div class="krampus-legs__r-upper"></div>
+				<div class="krampus-legs__r-lower"></div>
+				<div class="krampus-legs__r-foot"></div>
+			</div>
+
+
 		</section>
 
 		<section class="instructions__santa">			
