--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 		<section class="fighters">
 			<section class="santa-body">
 
-				<div class="santa-body__head"></div>
+				<div class="santa-body__head">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 145.85 201.54"><rect x="34" y="77" width="84" height="98" rx="12" ry="12" style="fill:#ffcf91"/><circle cx="121" cy="124" r="13" style="fill:#fa9994"/><path d="M78,103s2,23,9,26,31,0,35,8c7.28,14.56-18,5-15,11,.59,1.18,18-3,22,1,3.54,3.54,2,12,2,12s-1,10,1,14,2-2,9,3c5.21,3.72,8,22-1,22-13.34,0-42,5-49-3s-22-33-21-40,0-26,0-26V105s-1-4,2-4A12.68,12.68,0,0,1,78,103Z" style="fill:#e6e6e6"/><path d="M12.5,8.5s48.5-.5,59,0,25,30,25,30L34,47.94S33,38,32,27,12.5,8.5,12.5,8.5Z" style="fill:#e61a4b"/><rect x="32" y="40" width="76" height="42" rx="12" ry="12" transform="translate(-8.15 10.86) rotate(-8.39)" style="fill:#e61a4b"/><circle cx="102" cy="107" r="6" style="fill:#404040"/><path d="M70,131s-13,2-13-13c0-13,13-13,13-13Z" style="fill:#fa9994"/><rect x="27" y="73" width="93" height="27" rx="12" ry="12" transform="translate(-11.83 11.65) rotate(-8.39)" style="fill:#fff"/><circle cx="12.5" cy="12.5" r="12.5" style="fill:#fff"/></svg>
+				</div>
 				<div class="santa-body__torso">
 					<div class="santa-body__torso__inner"></div>
 					<div class="santa-l-arm">
@@ -39,16 +41,25 @@
 					<div class="santa-r-arm">
 						<div class="santa-r-arm__upper"></div>
 						<div class="santa-r-arm__lower"></div>
-					</div>				
+					</div>
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 214 280"><rect x="4" y="39" width="204" height="231" rx="99" ry="99" style="fill:#e61a4b"/><rect x="34.5" width="143" height="143" rx="50" ry="50" style="fill:#e61a4b"/><path d="M109,280h-6c-54.45,0-99-44.55-99-99H208C208,235.45,163.45,280,109,280Z" style="fill:#354957"/><rect y="143" width="208" height="28" style="fill:#404040"/><rect x="200" y="138" width="14" height="38" style="fill:#fbb200"/><ellipse cx="199" cy="90" rx="3" ry="8" transform="translate(-7.53 18.96) rotate(-5.35)" style="fill:#fff"/><ellipse cx="200" cy="117" rx="3" ry="8" style="fill:#fff"/><ellipse cx="194" cy="62" rx="3" ry="8" transform="translate(-9.15 47.51) rotate(-13.64)" style="fill:#fff"/><ellipse cx="182" cy="39" rx="3" ry="8" transform="translate(0.11 78.51) rotate(-24.35)" style="fill:#fff"/></svg>		
 				</div>
 			</section>
 			
 			<div class="santa-legs">
-				<div class="santa-legs__l-upper"></div>
-				<div class="santa-legs__l-lower"></div>
+				<div class="santa-legs__l-upper">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 134.04 131.2"><path d="M128.11,126.11c-28,25-115.13-50.2-115.13-50.2A44.62,44.62,0,0,1,13,13h0a44.62,44.62,0,0,1,62.93,0S156.11,101.11,128.11,126.11Z" style="fill:#465b68"/></svg>
+				</div>
+				<div class="santa-legs__l-lower">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 110.3 125.9"><path d="M4.43,123.27C-14.3,105,50.66,18,50.66,18,65.48.27,88.29-5.33,101.36,5.57h0c13.06,10.9,11.64,34.35-3.17,52.1C98.19,57.67,23.16,141.51,4.43,123.27Z" style="fill:#465b68"/><path d="M4.42,123.28C-11.71,108.2,20.7,59.77,31.06,45.21,33,42.56,34.11,41,34.11,41c11-18,8-6,34,8s30,9,28,13C96.11,62,23.5,141.1,4.42,123.28Z" style="fill:#343839"/><path d="M83.37,71.18,37,45.35A8.38,8.38,0,0,1,33.74,34l5-9a8.39,8.39,0,0,1,11.37-3.24L96.5,47.59c6.94,3.54,5.47,7.35,3.24,11.37l-5,9A8.39,8.39,0,0,1,83.37,71.18Z" style="fill:#fff"/></svg>
+				</div>
 				<div class="santa-legs__l-foot"></div>
-				<div class="santa-legs__r-upper"></div>
-				<div class="santa-legs__r-lower"></div>
+				<div class="santa-legs__r-upper">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 134.04 131.2"><path d="M128.11,126.11c-28,25-115.13-50.2-115.13-50.2A44.62,44.62,0,0,1,13,13h0a44.62,44.62,0,0,1,62.93,0S156.11,101.11,128.11,126.11Z" style="fill:#465b68"/></svg>
+				</div>
+				<div class="santa-legs__r-lower">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 110.3 125.9"><path d="M4.43,123.27C-14.3,105,50.66,18,50.66,18,65.48.27,88.29-5.33,101.36,5.57h0c13.06,10.9,11.64,34.35-3.17,52.1C98.19,57.67,23.16,141.51,4.43,123.27Z" style="fill:#465b68"/><path d="M4.42,123.28C-11.71,108.2,20.7,59.77,31.06,45.21,33,42.56,34.11,41,34.11,41c11-18,8-6,34,8s30,9,28,13C96.11,62,23.5,141.1,4.42,123.28Z" style="fill:#343839"/><path d="M83.37,71.18,37,45.35A8.38,8.38,0,0,1,33.74,34l5-9a8.39,8.39,0,0,1,11.37-3.24L96.5,47.59c6.94,3.54,5.47,7.35,3.24,11.37l-5,9A8.39,8.39,0,0,1,83.37,71.18Z" style="fill:#fff"/></svg>
+				</div>
 				<div class="santa-legs__r-foot"></div>
 			</div>
 
