--- a/index.html
+++ b/index.html
@@ -35,12 +35,20 @@
 				<div class="santa-body__torso">
 					<div class="santa-body__torso__inner"></div>
 					<div class="santa-l-arm">
-						<div class="santa-l-arm__upper"></div>
-						<div class="santa-l-arm__lower"></div>
+						<div class="santa-l-arm__upper">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 174.14 62.08"><title>santa__right-arm</title><path d="M151.69,53.23,23.44,62.08C11.88,61.35,0,44.88,0,27.76S22.78-.7,34.34,0l120.07,10.2A21.13,21.13,0,0,1,174.1,32.58l-.06,1A21.13,21.13,0,0,1,151.69,53.23Z" style="fill:#b30e33"/></svg>
+						</div>
+						<div class="santa-l-arm__lower">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 181.76 59.29"><title>santa__right-arm-lower</title><path d="M140,53.12C124.88,48.76,21.35,56.5,21.35,56.5,9.26,56.21-.35,43.79,0,28.89l0-1.23C.4,12.77,10.59.82,22.68,1.11c0,0,93.87,17.47,114,15.91s35-3.83,36.3,14.79C174.94,60.28,155.14,57.48,140,53.12Z" style="fill:#b30e33"/><rect x="133.94" y="8.5" width="46" height="49.05" rx="12" ry="12" transform="translate(194.22 -122.96) rotate(91.56)" style="fill:#c25b00"/><rect x="137.31" width="29.39" height="29.39" rx="14.69" ry="14.69" transform="translate(170.84 -136.86) rotate(91.56)" style="fill:#c25b00"/><rect x="101.62" y="23.82" width="49" height="22" rx="11" ry="11" transform="translate(151.77 -93.47) rotate(85.87)" style="fill:#fff"/></svg>
+						</div>
 					</div>
 					<div class="santa-r-arm">
-						<div class="santa-r-arm__upper"></div>
-						<div class="santa-r-arm__lower"></div>
+						<div class="santa-r-arm__upper">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 174.14 62.08"><title>santa__right-arm</title><path d="M151.69,53.23,23.44,62.08C11.88,61.35,0,44.88,0,27.76S22.78-.7,34.34,0l120.07,10.2A21.13,21.13,0,0,1,174.1,32.58l-.06,1A21.13,21.13,0,0,1,151.69,53.23Z" style="fill:#b30e33"/></svg>
+						</div>
+						<div class="santa-r-arm__lower">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 181.76 59.29"><title>santa__right-arm-lower</title><path d="M140,53.12C124.88,48.76,21.35,56.5,21.35,56.5,9.26,56.21-.35,43.79,0,28.89l0-1.23C.4,12.77,10.59.82,22.68,1.11c0,0,93.87,17.47,114,15.91s35-3.83,36.3,14.79C174.94,60.28,155.14,57.48,140,53.12Z" style="fill:#b30e33"/><rect x="133.94" y="8.5" width="46" height="49.05" rx="12" ry="12" transform="translate(194.22 -122.96) rotate(91.56)" style="fill:#c25b00"/><rect x="137.31" width="29.39" height="29.39" rx="14.69" ry="14.69" transform="translate(170.84 -136.86) rotate(91.56)" style="fill:#c25b00"/><rect x="101.62" y="23.82" width="49" height="22" rx="11" ry="11" transform="translate(151.77 -93.47) rotate(85.87)" style="fill:#fff"/></svg>
+						</div>
 					</div>
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 214 280"><rect x="4" y="39" width="204" height="231" rx="99" ry="99" style="fill:#e61a4b"/><rect x="34.5" width="143" height="143" rx="50" ry="50" style="fill:#e61a4b"/><path d="M109,280h-6c-54.45,0-99-44.55-99-99H208C208,235.45,163.45,280,109,280Z" style="fill:#354957"/><rect y="143" width="208" height="28" style="fill:#404040"/><rect x="200" y="138" width="14" height="38" style="fill:#fbb200"/><ellipse cx="199" cy="90" rx="3" ry="8" transform="translate(-7.53 18.96) rotate(-5.35)" style="fill:#fff"/><ellipse cx="200" cy="117" rx="3" ry="8" style="fill:#fff"/><ellipse cx="194" cy="62" rx="3" ry="8" transform="translate(-9.15 47.51) rotate(-13.64)" style="fill:#fff"/><ellipse cx="182" cy="39" rx="3" ry="8" transform="translate(0.11 78.51) rotate(-24.35)" style="fill:#fff"/></svg>		
 				</div>
@@ -53,14 +61,18 @@
 				<div class="santa-legs__l-lower">
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 110.3 125.9"><path d="M4.43,123.27C-14.3,105,50.66,18,50.66,18,65.48.27,88.29-5.33,101.36,5.57h0c13.06,10.9,11.64,34.35-3.17,52.1C98.19,57.67,23.16,141.51,4.43,123.27Z" style="fill:#465b68"/><path d="M4.42,123.28C-11.71,108.2,20.7,59.77,31.06,45.21,33,42.56,34.11,41,34.11,41c11-18,8-6,34,8s30,9,28,13C96.11,62,23.5,141.1,4.42,123.28Z" style="fill:#343839"/><path d="M83.37,71.18,37,45.35A8.38,8.38,0,0,1,33.74,34l5-9a8.39,8.39,0,0,1,11.37-3.24L96.5,47.59c6.94,3.54,5.47,7.35,3.24,11.37l-5,9A8.39,8.39,0,0,1,83.37,71.18Z" style="fill:#fff"/></svg>
 				</div>
-				<div class="santa-legs__l-foot"></div>
+				<div class="santa-legs__l-foot">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 104.4 27.58"><path d="M104.4,19.5c0,10.77-104,10.77-104,0C.4,14.24-1.6,0,3.4,0h49C81.11,0,104.4,8.73,104.4,19.5Z" style="fill:#40262e"/></svg>
+				</div>
 				<div class="santa-legs__r-upper">
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 134.04 131.2"><path d="M128.11,126.11c-28,25-115.13-50.2-115.13-50.2A44.62,44.62,0,0,1,13,13h0a44.62,44.62,0,0,1,62.93,0S156.11,101.11,128.11,126.11Z" style="fill:#465b68"/></svg>
 				</div>
 				<div class="santa-legs__r-lower">
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 110.3 125.9"><path d="M4.43,123.27C-14.3,105,50.66,18,50.66,18,65.48.27,88.29-5.33,101.36,5.57h0c13.06,10.9,11.64,34.35-3.17,52.1C98.19,57.67,23.16,141.51,4.43,123.27Z" style="fill:#465b68"/><path d="M4.42,123.28C-11.71,108.2,20.7,59.77,31.06,45.21,33,42.56,34.11,41,34.11,41c11-18,8-6,34,8s30,9,28,13C96.11,62,23.5,141.1,4.42,123.28Z" style="fill:#343839"/><path d="M83.37,71.18,37,45.35A8.38,8.38,0,0,1,33.74,34l5-9a8.39,8.39,0,0,1,11.37-3.24L96.5,47.59c6.94,3.54,5.47,7.35,3.24,11.37l-5,9A8.39,8.39,0,0,1,83.37,71.18Z" style="fill:#fff"/></svg>
 				</div>
-				<div class="santa-legs__r-foot"></div>
+				<div class="santa-legs__r-foot">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 104.4 27.58"><path d="M104.4,19.5c0,10.77-104,10.77-104,0C.4,14.24-1.6,0,3.4,0h49C81.11,0,104.4,8.73,104.4,19.5Z" style="fill:#40262e"/></svg>
+				</div>
 			</div>
 
 			<section class="krampus-body">
