--- a/index.html
+++ b/index.html
@@ -77,27 +77,51 @@
 
 			<section class="krampus-body">
 
-				<div class="krampus-body__head"></div>
+				<div class="krampus-body__head">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 138.55 192.44"><path d="M52.55,95s-2,12,7,14,18-6,18-6,30-27,27-50-17-50-17-50,7,37-4,54S52.55,95,52.55,95Z" style="fill:#666"/><path d="M46.43,186h60c8.12-7,32.12,11.6,32.12,5l-20.12-91a12,12,0,0,0-12-12l-60-10a12,12,0,0,0-12,12v26.17s-23,14.66-20,13.24S9.55,130,7.55,133s0,8,0,8-1.91,13.88,1,14,36,1,36,1-32.65,1.49-35.32,1.75S10.55,181,10.55,181c3.54,5.3,13.06,6.09,21.64,5.85C38.18,186.68,43.71,186,46.43,186Z" style="fill:#364a58"/><circle cx="50.43" cy="108" r="6" style="fill:#fff"/><path d="M82.43,132s27.12-16,29.12-22c4.12-12.33-29.12-4-29.12-4Z" style="fill:#fa9994"/><path d="M62.55,92s-2,12,7,14,18-6,18-6,30-27,27-50-17-50-17-50,7,37-4,54S62.55,92,62.55,92Z" style="fill:#666"/><circle cx="12.05" cy="137.5" r="2.5" style="fill:#404040"/><path d="M17.55,157s-11,1-10,13c.63,7.48-4-4-4-4s-2,5-3,5-2-14,10-15S17.55,157,17.55,157Z" style="fill:#e61a4b"/><polygon points="12.55 155 17.55 155 14.55 171 12.55 155" style="fill:#fff"/></svg>
+				</div>
 				<div class="krampus-body__torso">
 					<div class="krampus-body__torso__inner"></div>
 					<div class="krampus-l-arm">
-						<div class="krampus-l-arm__upper"></div>
-						<div class="krampus-l-arm__lower"></div>
+						<div class="krampus-l-arm__upper">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 174.14 62.08"><path d="M22.45,53.23l7.93,4.44-1.33-4,6.33,4L35,54.1l6.35,3.57L41,54.51l3.36.23L150.7,62.08c11.56-.73,23.5-17.2,23.44-34.32S151.36-.7,139.8,0L19.73,10.23A21.13,21.13,0,0,0,0,32.58l.06,1A21.13,21.13,0,0,0,22.45,53.23Z" style="fill:#404040"/></svg>
+						</div>
+						<div class="krampus-l-arm__lower">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 181.76 59.29"><path d="M41.75,53.12c4.09-1.18,14.63-1.47,27.85-1.27,1.3,0,6.31,4.1,7.66,4.12s-1.13-4,.17-4c.91,0,3.91,2.94,4.83,3s-.2-2.83.75-2.8c1.21,0,3,2.76,4.25,2.8.72,0,.28-3,1-3,33.36,1.16,72.15,4.53,72.15,4.53,12.09-.29,21.7-12.71,21.34-27.61l0-1.23C181.36,12.77,171.17.82,159.08,1.11c0,0-93.87,17.47-114,15.91s-35-3.83-36.3,14.79C6.82,60.28,26.62,57.48,41.75,53.12Z" style="fill:#404040"/><rect x="1.82" y="8.5" width="46" height="49.05" rx="12" ry="12" transform="translate(57.15 7.31) rotate(88.44)" style="fill:#c25b00"/><rect x="15.06" width="29.39" height="29.39" rx="14.69" ry="14.69" transform="translate(43.63 -15.45) rotate(88.44)" style="fill:#c25b00"/><rect x="31.14" y="23.82" width="49" height="22" rx="11" ry="11" transform="translate(94.38 -18.17) rotate(94.13)" style="fill:#fff"/></svg>
+						</div>
 					</div>
 					<div class="krampus-r-arm">
-						<div class="krampus-r-arm__upper"></div>
-						<div class="krampus-r-arm__lower"></div>
+						<div class="krampus-r-arm__upper">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 174.14 62.08"><path d="M22.45,53.23l7.93,4.44-1.33-4,6.33,4L35,54.1l6.35,3.57L41,54.51l3.36.23L150.7,62.08c11.56-.73,23.5-17.2,23.44-34.32S151.36-.7,139.8,0L19.73,10.23A21.13,21.13,0,0,0,0,32.58l.06,1A21.13,21.13,0,0,0,22.45,53.23Z" style="fill:#404040"/></svg>
+						</div>
+						<div class="krampus-r-arm__lower">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 181.76 59.29"><path d="M41.75,53.12c4.09-1.18,14.63-1.47,27.85-1.27,1.3,0,6.31,4.1,7.66,4.12s-1.13-4,.17-4c.91,0,3.91,2.94,4.83,3s-.2-2.83.75-2.8c1.21,0,3,2.76,4.25,2.8.72,0,.28-3,1-3,33.36,1.16,72.15,4.53,72.15,4.53,12.09-.29,21.7-12.71,21.34-27.61l0-1.23C181.36,12.77,171.17.82,159.08,1.11c0,0-93.87,17.47-114,15.91s-35-3.83-36.3,14.79C6.82,60.28,26.62,57.48,41.75,53.12Z" style="fill:#404040"/><rect x="1.82" y="8.5" width="46" height="49.05" rx="12" ry="12" transform="translate(57.15 7.31) rotate(88.44)" style="fill:#c25b00"/><rect x="15.06" width="29.39" height="29.39" rx="14.69" ry="14.69" transform="translate(43.63 -15.45) rotate(88.44)" style="fill:#c25b00"/><rect x="31.14" y="23.82" width="49" height="22" rx="11" ry="11" transform="translate(94.38 -18.17) rotate(94.13)" style="fill:#fff"/></svg>
+						</div>
 					</div>
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 195.63 264.39"><path d="M27.63,22.39c19.07-38.14,74.85-25,105,20l-8-1,17,18-10-3,19,27-10-3,12,17s-9.28-2.87-8,0c2.41,5.43,9,11.41,10,17,.44,2.47-6.53-2.44-6,0,10,46-6.29,79.5-12,105-4,17.94-12.6,34.87-36,39-38.81,6.85-64.26,3.09-78.22-5.76-2-1.26,3.75-8.78,2.22-10.24-1.28-1.21-6.05,6.32-7,5-1.12-1.54,2.7-10.33,2-12-.6-1.42-4.7,3.49-5,2-.43-2.11,4.84-9.79,5-12,.06-.88-5.15,1.89-5,1,.27-1.63,5.7-9.48,6-11,.56-2.89-5.62,2.52-5,0,9.58-39.12,26-22-1-76-8.44-16.88-17-40.21-14-60C4.63,53.39,15.63,46.39,27.63,22.39Z" style="fill:#364a58"/><polygon points="125.63 237.47 157.93 264.39 195.63 232.08 176.78 201.12 160.63 215.93 175.43 213.24 182.16 228.04 157.93 246.89 129.66 209.2 125.63 237.47" style="fill:#364a58"/></svg>
 				</div>
+
 			</section>
 			
 			<div class="krampus-legs">
-				<div class="krampus-legs__l-upper"></div>
-				<div class="krampus-legs__l-lower"></div>
-				<div class="krampus-legs__l-foot"></div>
-				<div class="krampus-legs__r-upper"></div>
-				<div class="krampus-legs__r-lower"></div>
-				<div class="krampus-legs__r-foot"></div>
+				<div class="krampus-legs__l-upper">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 130.32 126.08"><path d="M102.69,116.47c-2.83.89.9,9.23-2.07,9.38-1.5.07-5.6-6.51-7.13-6.6S90,125,88.37,124.77c-2.05-.32-3.74-3.12-5.09-4.71-4.07-4.8-8,4.17-9.2,3.8-23.55-7.68-38.74-27.69-38.74-27.69C24.43,86.06,5.61,61.05.63,41.47c-2.06-8.12.62-32,12.48-38.52,9-5,28.64-2.78,47.05.16C62.94,3.55,76.5.79,76.5.79l-9.22,9.94L87.71,6,78.5,15l24.51-6L90.72,23.21l17.38-6.5s-8.54,10.78-9.23,14.05c-3.72,17.42-12.28,8.14-7.14,23.35,4.49,13.28,57.57,48.62,31.35,70-1.18,1-4.6-7.6-6.1-6.68s-4.3,7.81-6.15,8.68C110,126.47,103.67,116.16,102.69,116.47Z" style="fill:#404040"/></svg>
+				</div>
+				<div class="krampus-legs__l-lower">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 85.67 121.38"><path d="M3.26,120.13c-16.17-12.47,33.11-98.3,33.11-98.3C47.7,4.06,66.13-4.64,77.34,2.5h0C88.54,9.64,88.43,30,77.1,47.8,77.1,47.8,19.43,132.61,3.26,120.13Z" style="fill:#050b12"/></svg>
+				</div>
+				<div class="krampus-legs__l-foot">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62.79 47.62"><path d="M2.28,45.79c-5.71-3.3.7-10.29,4-16l16-23c3.3-5.72,7.26-8.72,13-5.42l25,13.42c5.72,3.3.3,6.28-3,12l-10,18C44,50.5,2.28,45.79,2.28,45.79Z" style="fill:#b3b3b3"/><path d="M2.28,45.79c-5.71-3.3.7-10.29,4-16l43,11c-1.17,2,.59,5.27-7,6C28.49,48.11,2.28,45.79,2.28,45.79Z" style="fill:#999"/><polygon points="13.28 34.79 28.28 8.79 33.28 11.79 13.28 34.79" style="fill:#eaeaea"/></svg>
+				</div>
+				<div class="krampus-legs__r-upper">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 130.32 126.08"><path d="M102.69,116.47c-2.83.89.9,9.23-2.07,9.38-1.5.07-5.6-6.51-7.13-6.6S90,125,88.37,124.77c-2.05-.32-3.74-3.12-5.09-4.71-4.07-4.8-8,4.17-9.2,3.8-23.55-7.68-38.74-27.69-38.74-27.69C24.43,86.06,5.61,61.05.63,41.47c-2.06-8.12.62-32,12.48-38.52,9-5,28.64-2.78,47.05.16C62.94,3.55,76.5.79,76.5.79l-9.22,9.94L87.71,6,78.5,15l24.51-6L90.72,23.21l17.38-6.5s-8.54,10.78-9.23,14.05c-3.72,17.42-12.28,8.14-7.14,23.35,4.49,13.28,57.57,48.62,31.35,70-1.18,1-4.6-7.6-6.1-6.68s-4.3,7.81-6.15,8.68C110,126.47,103.67,116.16,102.69,116.47Z" style="fill:#404040"/></svg>
+				</div>
+				<div class="krampus-legs__r-lower">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 85.67 121.38"><path d="M3.26,120.13c-16.17-12.47,33.11-98.3,33.11-98.3C47.7,4.06,66.13-4.64,77.34,2.5h0C88.54,9.64,88.43,30,77.1,47.8,77.1,47.8,19.43,132.61,3.26,120.13Z" style="fill:#050b12"/></svg>
+				</div>
+				<div class="krampus-legs__r-foot">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62.79 47.62"><path d="M2.28,45.79c-5.71-3.3.7-10.29,4-16l16-23c3.3-5.72,7.26-8.72,13-5.42l25,13.42c5.72,3.3.3,6.28-3,12l-10,18C44,50.5,2.28,45.79,2.28,45.79Z" style="fill:#b3b3b3"/><path d="M2.28,45.79c-5.71-3.3.7-10.29,4-16l43,11c-1.17,2,.59,5.27-7,6C28.49,48.11,2.28,45.79,2.28,45.79Z" style="fill:#999"/><polygon points="13.28 34.79 28.28 8.79 33.28 11.79 13.28 34.79" style="fill:#eaeaea"/></svg>
+				</div>
 			</div>
 
 
