--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/normalize.css" />
 	<link rel="stylesheet" href="css/index.css" />
@@ -50,7 +51,7 @@
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 181.76 59.29"><title>santa__right-arm-lower</title><path d="M140,53.12C124.88,48.76,21.35,56.5,21.35,56.5,9.26,56.21-.35,43.79,0,28.89l0-1.23C.4,12.77,10.59.82,22.68,1.11c0,0,93.87,17.47,114,15.91s35-3.83,36.3,14.79C174.94,60.28,155.14,57.48,140,53.12Z" style="fill:#b30e33"/><rect x="133.94" y="8.5" width="46" height="49.05" rx="12" ry="12" transform="translate(194.22 -122.96) rotate(91.56)" style="fill:#c25b00"/><rect x="137.31" width="29.39" height="29.39" rx="14.69" ry="14.69" transform="translate(170.84 -136.86) rotate(91.56)" style="fill:#c25b00"/><rect x="101.62" y="23.82" width="49" height="22" rx="11" ry="11" transform="translate(151.77 -93.47) rotate(85.87)" style="fill:#fff"/></svg>
 						</div>
 					</div>
-					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 214 280"><rect x="4" y="39" width="204" height="231" rx="99" ry="99" style="fill:#e61a4b"/><rect x="34.5" width="143" height="143" rx="50" ry="50" style="fill:#e61a4b"/><path d="M109,280h-6c-54.45,0-99-44.55-99-99H208C208,235.45,163.45,280,109,280Z" style="fill:#354957"/><rect y="143" width="208" height="28" style="fill:#404040"/><rect x="200" y="138" width="14" height="38" style="fill:#fbb200"/><ellipse cx="199" cy="90" rx="3" ry="8" transform="translate(-7.53 18.96) rotate(-5.35)" style="fill:#fff"/><ellipse cx="200" cy="117" rx="3" ry="8" style="fill:#fff"/><ellipse cx="194" cy="62" rx="3" ry="8" transform="translate(-9.15 47.51) rotate(-13.64)" style="fill:#fff"/><ellipse cx="182" cy="39" rx="3" ry="8" transform="translate(0.11 78.51) rotate(-24.35)" style="fill:#fff"/></svg>		
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 214 280"><rect x="3" y="39" width="204" height="231" rx="99" ry="99" style="fill:#e61a4b"/><rect x="34.5" width="143" height="143" rx="50" ry="50" style="fill:#e61a4b"/><path d="M109,280h-6c-54.45,0-99-44.55-99-99H208C208,235.45,163.45,280,109,280Z" style="fill:#354957"/><rect y="143" width="208" height="28" style="fill:#404040"/><rect x="200" y="138" width="14" height="38" style="fill:#fbb200"/><ellipse cx="177" cy="78" rx="3" ry="8" transform="matrix(0.82, -0.57, 0.57, 0.82, -12.75, 115.54)" style="fill:#fff"/><ellipse cx="190" cy="96" rx="3" ry="8" transform="translate(-22.84 100.14) rotate(-27.92)" style="fill:#fff"/><ellipse cx="200" cy="117" rx="3" ry="8" transform="translate(-17.43 36.93) rotate(-10.11)" style="fill:#fff"/></svg>
 				</div>
 			</section>
 			
@@ -147,6 +148,11 @@
 		</section>
 
 	</section>
+
+	<footer class="responsive-message">
+		<h4>It's not the size that counts...</h4>
+		<p>Just kidding, it is. You'll need a desktop or laptop with a keyboard to fight.</p>
+	</footer>
 
 	<script src="js/main.js"></script>
 </body>
