Feat: Improved result screen design

--- a/index.html
+++ b/index.html
@@ -127,7 +127,10 @@
 
 		</section>
 
-		<section class="instructions__santa">			
+		<section class="instructions__santa">
+			<section class="instructions__players">	
+				<p>Player <span>1</span></p>
+			</section>
 			<p>
 				<strong class="santa-key-a">A</strong><strong class="santa-key-s">S</strong>
 			</p>
@@ -135,6 +138,9 @@
 		</section>
 
 		<section class="instructions__krampus">
+			<section class="instructions__players">	
+				<p>Player <span>2</span></p>
+			</section>
 			<p>
 				<strong class="krampus-key-k">K</strong><strong class="krampus-key-l">L</strong>
 			</p>
@@ -143,7 +149,7 @@
 
 		<section class="result" aria-hidden="true">
 			<h2 class="result__title">Who wins?</h2>
-			<button class="reset">Go again?</button>
+			<button class="btn-reset">Go again?</button>
 		</section>
 
 	</section>
