Feat: Change up of header and player names

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 			<p class="header__subtitle">2017 Deathmatch</p>
 		</header>
 		
-		<section class="healthbar">			
+		<section class="healthbar">
+			<p>		
 			<div class="healthbar__santa">
-				<h3>Santa</h3>
+				<h3>Player 1</h3>
 				<meter class="healthbar__santa-meter" max="1" min="0" value="1"></meter>
 			</div>
 			<div class="healthbar__krampus">
-				<h3>Krampus</h3>
+				<h3>Player 2</h3>
 				<meter class="healthbar__krampus-meter" max="1" min="0" value="1" dir="rtl"></meter>
 			</div>
 		</section>
@@ -127,10 +128,7 @@
 
 		</section>
 
-		<section class="instructions__santa">
-			<section class="instructions__players">	
-				<p>Player <span>1</span></p>
-			</section>
+		<section class="instructions__santa">			
 			<p>
 				<strong class="santa-key-a">A</strong><strong class="santa-key-s">S</strong>
 			</p>
@@ -138,9 +136,6 @@
 		</section>
 
 		<section class="instructions__krampus">
-			<section class="instructions__players">	
-				<p>Player <span>2</span></p>
-			</section>
 			<p>
 				<strong class="krampus-key-k">K</strong><strong class="krampus-key-l">L</strong>
 			</p>
