Feat: Added OG, meta links and GA tracking

--- a/index.html
+++ b/index.html
@@ -3,10 +3,31 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Document</title>
+	<title>Santa vs. Krampus | Deathmatch</title>
 	<link rel="stylesheet" href="css/normalize.css" />
 	<link rel="stylesheet" href="css/index.css" />
 	<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+	
+	<meta property="og:title" content="Santa vs. Krampus | Deathmatch" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://santa-vs-krampus.surge.sh/" />
+	<meta property="og:image" content="images/og.png" />
+
+	<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+	<link rel="manifest" href="images/manifest.json">
+	<link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="theme-color" content="#ffffff">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110322122-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	  gtag('config', 'UA-110322122-1');
+	</script>
 </head>
 <body>
 
