Fix: Link to OG image updated

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta property="og:title" content="Santa vs. Krampus | Deathmatch" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://santa-vs-krampus.surge.sh/" />
-	<meta property="og:image" content="images/og.png" />
+	<meta property="og:image" content="https://santa-vs-krampus.surge.sh/images/og.png" />
 
 	<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
